syntax = "proto3";

// Messages themselves are just custom types

package go.micro.srv.consignment;

service ShippingService {
    rpc CreateConsignment(Consignment) returns (Response) {}

    // Created new method 
    rpc GetConsignments(GetRequest) returns (Response) {}
}

message Consignment {
    string id = 1;
    string description = 2;
    int32 weight = 3;
    repeated Container containers = 4;
    string vessel_id = 5;
}

message Container {
    string id = 1;
    string customer_id = 2;
    string origin = 3;
    string user_id = 4;
}

// Create a blank get request 
message GetRequest {}

message Response {
    bool created = 1;
    Consignment consignment = 2;
    // Added pluralized consignment to our generic response
    repeated Consignment consignments=3;
}